<?xml version="1.0"?>
<package>
  <name>perception_rece</name>
  <version>0.0.0</version>
  <description>The perception_rece package</description>
  <maintainer email="robosense@todo.todo">robosense</maintainer>

  <license>TODO</license>



  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>

  <build_depend>pcl_ros</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>cv_bridge</build_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>genmsg</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>

  <run_depend>pcl_ros</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>cv_bridge</run_depend>

  <run_depend>std_msgs</run_depend>
  <run_depend>genmsg</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
